--- a/netflix/new.html
+++ b/netflix/new.html
@@ -30,11 +30,11 @@
         <a href="#" class="btn">Download CV</a>
 
         <div class="social">
-          <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="social/facebook.png" alt="fb"></a>
-          <a href="#"><img src="social/instagram.png" alt="ig"></a>
-          <a href="#"><img src="social/linkedin.png" alt="lk"></a>
-          <a href="#"><img src="social/twitter.png" alt="tw"></a>
-          <a href="#"><img src="social/whatsapp.png" alt="ws"></a>
+          <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="facebook.png" alt="fb"></a>
+          <a href="#"><img src="instagram.png" alt="ig"></a>
+          <a href="#"><img src="linkedin.png" alt="lk"></a>
+          <a href="#"><img src="twitter.png" alt="tw"></a>
+          <a href="#"><img src="whatsapp.png" alt="ws"></a>
         </div>
         <div class="container-images">
           <img src="background.png" alt="" class="shape">
